# gRPC_OpenCV_Example

./: .gitignore  CMakeLists.txt  greeter_async_client.cc  greeter_async_server.cc  greeter_client.cc  greeter_server.cc  mat_converter.cpp  mat_converter.h
cmake/: grpc.cmake  opencv.cmake  protobuf.cmake
protofile/: IPCProto.proto
